--- a/media/page.css
+++ b/media/page.css
@@ -2,10 +2,13 @@ body {
   font-family: sans-serif;
   font-size: small;
   padding: 20px;
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
 }
 
 a {
-  color: blue;
+  /* color: blue; */
+  color: var(--vscode-textLink-foreground);
   text-decoration: none;
 }
 
@@ -14,7 +17,8 @@ a:hover {
 }
 
 a:visited {
-  color: blue;
+  /* color: blue; */
+  color: var(--vscode-textLink-foreground);
 }
 
 div.row > div[class^='col-'] {
@@ -26,7 +30,10 @@ div.row > div[class^='col-'] {
 }
 
 .highlight-row {
-  background-color: gainsboro;
+  /* background-color: var(--vscode-tab-inactiveBackground); */
+  color: var(--vscode-list-hoverForeground);
+  background-color: var(--vscode-list-hoverBackground);
+
   margin-bottom: 0;
   display: flex;
   align-items: center;
@@ -53,15 +60,32 @@ select {
   padding: 3px;
   box-sizing: border-box;
   resize: none;
+  /* border: rgb(221, 221, 221) solid 1px; */
+  background-color: var(--vscode-input-background);
+  color: var(--vscode-input-foreground);
+  border: 1px solid
+    var(--vscode-input-border, var(--vscode-editorWidget-border));
 }
 
-/* Prevent browser password manager suggestions */
-input:not([type='submit']):not([type='search']) {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: white !important;
-  color: inherit !important;
+input:focus,
+textarea:focus,
+select:focus,
+button:focus {
+  opacity: 1;
+  outline-color: var(--vscode-focusBorder);
+  outline-offset: -1px;
+  outline-style: solid;
+  outline-width: 1px;
+}
+
+button {
+  color: var(--vscode-button-foreground);
+  background-color: var(--vscode-button-background);
+  border: 0;
+}
+
+button:hover {
+  background-color: var(--vscode-button-hoverBackground);
 }
 
 /* Reset autofill styles */
@@ -80,9 +104,15 @@ textarea {
   overflow-y: auto;
 }
 
-textarea.locked {
-  background-color: #f0f0f0;
+textarea[readonly] {
+  background-color: var(--vscode-editor-background);
+  /* color: var(--vscode-editor-foreground); */
+  color: var(--vscode-input-placeholderForeground);
 }
+
+/* textarea.locked {
+  background-color: #f0f0f0;
+} */
 
 .label-right {
   display: flex;
@@ -134,6 +164,31 @@ table#translations td:nth-child(2) {
   width: 100%;
 }
 
+table#layout {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 5px;
+}
+
+table#layout td {
+  border: none;
+  padding-bottom: 5px;
+}
+
+table#layout td.fullrow {
+  width: 100%;
+}
+
+table#layout td:first-child {
+  padding-left: 10px;
+  padding-right: 20px;
+  text-wrap: nowrap;
+}
+
+table#layout td:first-child > label {
+  text-align: right;
+}
+
 tags.tagify {
   width: 100%;
 }
@@ -143,8 +198,26 @@ tags.tagify {
 }
 
 .customTagify {
-  --tags-disabled-bg: white;
+  /* --tags-disabled-bg: white; */
   --readonly-striped: 0;
+  --tags-disabled-bg: var(--vscode-editor-background);
+  --tag-text-color: var(--vscode-editor-foreground);
+  --tag-text-color--edit: var(--vscode-input-foreground);
+  --tag-bg: var(--vscode-input-background);
+
+  /* border: 1px solid var(--vscode-input-background); */
+  border: 1px solid
+    var(--vscode-input-border, var(--vscode-editorWidget-border));
+}
+
+.tagify__tag:focus div,
+.tagify__tag:hover:not([readonly]) div {
+  color: var(--vscode-list-hoverForeground);
+}
+
+.tagify__tag:focus div::before,
+.tagify__tag:hover:not([readonly]) div::before {
+  --tag-bg: var(--vscode-list-hoverBackground);
 }
 
 .customTagify[disabled] {
@@ -156,8 +229,8 @@ tags.tagify {
   position: absolute;
   z-index: 999;
   opacity: 0.8;
-  background-color: #F8D7DA;
-  color: #721C24;
+  background-color: #f8d7da;
+  color: #721c24;
   padding: 8px 12px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
