--- a/media/page.css
+++ b/media/page.css
@@ -375,7 +375,7 @@ div#translation-text-locked > div.codicon:hover {
   border: 1px solid var(--vscode-editorWidget-border);
 
   border-radius: 6px;
-  min-width: 600px;
+  min-width: 550px;
   z-index: 1000;
   display: flex;
   flex-direction: column;
@@ -416,40 +416,44 @@ table#properties td {
   padding: 5px;
 }
 
-table#properties .section-row {
-  color: var(--vscode-list-hoverForeground);
-  background-color: var(--vscode-list-hoverBackground);
+table#properties td:first-child {
+  /* font-weight: bold; */
 }
 
-table#properties .layout-row {
+table#properties tr.template > td {
+  border-top: 1px solid var(--vscode-editorWidget-border);
+  padding-top: 10px;
+}
+
+table#settings-table tr > td.group {
+  font-weight: bold;
+  padding-top: 8px;
+}
+
+table#settings-table tr.settingValue td:first-child {
+  width: 50%;
+  border-bottom: 1px solid var(--vscode-editorWidget-border);
+  border-right: 1px solid var(--vscode-editorWidget-border);
+}
+
+table#settings-table tr.settingValue td:nth-child(2) {
+  border-bottom: 1px solid var(--vscode-editorWidget-border);
+}
+
+table#settings-table tr.settingValue:last-child td {
+  border-bottom: none;
+}
+
+table#settings-table tr.settingValue td label {
+    white-space: normal;
+}
+
+div.icon-text {
   display: flex;
-  flex-direction: column;
-  gap: 8px;
+  flex-direction: row;
+  gap: 0.3em;
 }
 
-table#properties .layout-row > label:first-child {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-table#properties .layout-row > label:first-child > input {
-  width: auto;
-  outline: none;
-  margin: 0 5px 0 5px;
-  vertical-align: middle;
-}
-
-table#properties .layout-row > label:nth-child(2) {
-  color: var(--vscode-input-placeholderForeground);
-  font-style: italic;
-  padding-left: 30px;
-}
-
-table#properties .layout-row > label > input[type='checkbox'] {
-  width: auto;
-}
-
-table#properties .layout-row > label:nth-child(3) {
-  padding-left: 30px;
+div.icon-text > div.codicon {
+  padding-left: 5px;
 }
