--- a/media/page.css
+++ b/media/page.css
@@ -22,6 +22,11 @@ body[data-loading] > div#app {
   display: none;
 }
 
+.error-text {
+  color: var(--vscode-errorForeground);
+  background-color: var(--vscode-errorBackground);
+}
+
 a {
   /* color: blue; */
   color: var(--vscode-textLink-foreground);
@@ -143,14 +148,25 @@ button.big-btn {
   height: 35px;
 }
 
-/* button[type='button'] {
-  padding: 5 0 5 0;
-  height: 28px;
-} */
-
 button:hover {
   background-color: var(--vscode-button-hoverBackground);
 }
+
+button:disabled {
+  /* color: var(--vscode-disabledForeground);
+  background-color: var(--vscode-button-background);
+  opacity: 0.5; */
+
+  color: rgb(from var(--vscode-button-foreground) r g b / 0.5);
+
+  background-color: rgb(from var(--vscode-button-background) r g b / 0.5);
+
+  cursor: not-allowed;
+}
+
+/* button:disabled:hover {
+  background-color: var(--vscode-button-background);
+} */
 
 /* Reset autofill styles */
 input:-webkit-autofill,
@@ -366,19 +382,17 @@ div#translation-text-locked > div.codicon:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* background: #fff; */
   box-shadow: 0 0px 8px var(--vscode-widget-shadow);
-
   color: var(--vscode-editorWidget-foreground);
   background-color: var(--vscode-editorWidget-background);
-  /* border: 1px solid var(--vscode-contrastBorder); */
   border: 1px solid var(--vscode-editorWidget-border);
-
   border-radius: 6px;
   min-width: 550px;
   z-index: 1000;
   display: flex;
   flex-direction: column;
+  height: 80vh;
+  max-height: 80vh;
 }
 
 .modal-dialog > div:first-child {
@@ -398,7 +412,46 @@ div#translation-text-locked > div.codicon:hover {
 .modal-dialog > div:last-child {
   padding: 12px 16px;
   border-top: 1px solid var(--vscode-editorWidget-border);
-  /* background: #f5f5f5; */
+  text-align: right;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-dialog > div:last-child > div:first-child {
+  flex: 1;
+  text-align: left;
+}
+
+.modal-dialog > div:last-child > div:first-child > label {
+  font-size: smaller;
+  /* max-width: 98%;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  max-height: 2.2em; */
+  cursor: pointer;
+}
+
+label.small-2lines-trim {
+  max-width: 98%;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  max-height: 2.2em;
+  cursor: pointer;
+}
+
+.modal-dialog > div:last-child > div:last-child {
+  flex: none;
   text-align: right;
 }
 
@@ -422,12 +475,7 @@ table#properties td:first-child {
 
 table#properties tr.template > td {
   border-top: 1px solid var(--vscode-editorWidget-border);
-  padding-top: 10px;
-}
-
-table#settings-table tr > td.group {
-  font-weight: bold;
-  padding-top: 8px;
+  padding-top: 20px;
 }
 
 table#settings-table tr.settingValue td:first-child {
@@ -445,7 +493,7 @@ table#settings-table tr.settingValue:last-child td {
 }
 
 table#settings-table tr.settingValue td label {
-    white-space: normal;
+  white-space: normal;
 }
 
 div.icon-text {
